tests/require-baseline-workers-for-hcloud-volumes/longhorn-claim/values.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: require-baseline-workers-for-hcloud-volumes
    rules:
      - name: require-baseline-worker-affinity
        foreachValues:
          claimStorageClass:
            - longhorn-wffc
